# NCE

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
DbgKatEngine/: CMakeLists.txt  dbg_alice_main.cpp
DbgNCE/: dbg_alice_main.cpp
Launcher/: CMakeLists.txt
SaveEditor/: CMakeLists.txt
assets/localisation/ar_AR/: alice.csv
assets/localisation/de_DE/: alice.csv
assets/localisation/en_US/: alice.csv
assets/localisation/hu_HU/: alice.csv
assets/localisation/it_IT/: alice.csv
assets/localisation/ko_SK/: alice.csv
assets/localisation/nl_NL/: alice.csv
assets/localisation/pl_PL/: alice.csv
assets/localisation/ru_RU/: alice.csv
assets/localisation/zh_CN/: alice.csv
docs/: extensions.md  file_system_wrapper.md  project_alice_modders_suggestions.md  save_file_formats.md  scripting_extensions.md  text_data.md  triggers.md  user_guide.md
src/: NCE.desktop  NCE.rc  resource.h
src/ai/: ai.cpp
src/economy/: economy.cpp
src/filesystem/: simple_fs_nix.cpp  simple_fs_win.cpp
src/graphics/: opengl_wrapper.cpp
src/gui/: gui_console.cpp
src/launcher/: launcher_main.cpp
src/network/: network.cpp  network_win.cpp
src/window/: window_nix.cpp  window_win.cpp
tests/: CMakeLists.txt
